Cleaning and commenting

--- a/explore.html
+++ b/explore.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/w.css">
 
     <!-- Document Title -->
     <title>Explore</title>
@@ -108,8 +107,12 @@
 
     </div>
 
-    <button class="wwdsa btn" onclick="openSelection()">w</button>
+    <!-- Filter Button -->
+    <section class="filter-btn" id="filter-btn">
+        <button class="btn" onclick="openSelection()">Filter Search</button>
+    </section>
 
+    <!-- Filters Sidebar -->
     <div id="selectionSB" class="selectionSB">
         <div class="header">
             <a href="javascript:void(0)" class="close" onclick="closeSelection()">&#10005;</a>
