--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     </section>
 
     <!-- Loan Caluclator -->
-    <!-- <section class="loan" id="loan">
+    <section class="loan" id="loan">
     <h1 class="heading">Loan Calculator</h1>
     <div class="row">
         <form action="">
@@ -265,7 +265,7 @@
             <input id="totalCost" type="text" placeholder="Total Cost" class="box">
         </form>
     </div>
-</section> -->
+</section>
 
     <!-- Reviews -->
     <section class="reviews" id="reviews">
@@ -383,33 +383,6 @@
         </div>
 
     </section>
-
-    <!-- Contact Form & Map -->
-    <!-- <section class="contact" id="contact">
-
-    <h1 class="heading">contact us</h1>
-
-    <h1 class="heading hoursHeading">Hours Of Operation:</h1>
-
-    <p>Monday to Friday: 9am - 9pm</p>
-    <p>Saturday to Sunday: 7am - 5pm</p>
-
-    <div class="row">
-
-        <iframe title="Map" class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2492.2740066702377!2d-83.3618275138211!3d42.462688310661335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8824b116669bce49%3A0x5e70c495594a2405!2s32000%20Shiawassee%20St%2C%20Farmington%2C%20MI%2048336!5e0!3m2!1sen!2sus!4v1667081914522!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    
-        <form action="">
-            <h3>get in touch</h3>
-            <input type="text" placeholder="your name" class="box">
-            <input type="email" placeholder="your email" class="box">
-            <input type="tel" placeholder="subject" class="box">
-            <textarea placeholder="your message" class="box" cols="30" rows="10"></textarea>
-            <input type="submit" value="send message" class="btn">
-        </form>
-
-    </div>
-
-</section> -->
 
     <!-- Footer -->
     <section class="footer" id="footer">
